# Crawling_Companion

./: README.md  simple_yolo_detect.py
.devcontainer/: Dockerfile  devcontainer.json
src/t516_project/: README.md
src/t516_project/crawling_companion/: package.xml  setup.cfg  setup.py
src/t516_project/crawling_companion/baby/: baby.py
src/t516_project/crawling_companion/launch/: crawling_companion.launch.py
src/t516_project/crawling_companion/resource/: crawling_companion  host_led_service.py
src/t516_project/crawling_companion/test/: approach_test.py  arm_tester.py  baby_behavior.py  lidar_test.py  turn_test.py  vision_waver.py  wander_test.py  yolo2motor.py
src/t516_project/turtlebot3_gix/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/t516_project/turtlebot3_gix_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/t516_project/turtlebot3_gix_bringup/config/: hardware_controller_manager.yaml
src/t516_project/turtlebot3_gix_bringup/launch/: base.launch.py  hardware.launch.py
src/t516_project/turtlebot3_gix_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/t516_project/turtlebot3_gix_description/launch/: model.launch.py
src/t516_project/turtlebot3_gix_description/ros2_control/: turtlebot3_gix_system.ros2_control.xacro
src/t516_project/turtlebot3_gix_description/urdf/: gix_custom_add-on.urdf.xacro  materials.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_gix.urdf.xacro  turtlebot3_waffle_pi.urdf.xacro
src/t516_project/turtlebot3_gix_hardware/: CHANGELOG.rst  CMakeLists.txt  package.xml  turtlebot3_gix_hardware.xml
src/t516_project/turtlebot3_gix_hardware/include/turtlebot3_gix_hardware/: dynamixel_sdk_wrapper.hpp  opencr.hpp  opencr_control_table.hpp  opencr_definitions.hpp  turtlebot3_gix_system.hpp  visibility_control.h
src/t516_project/turtlebot3_gix_hardware/src/: dynamixel_sdk_wrapper.cpp  opencr.cpp  turtlebot3_gix_system.cpp
src/t516_project/turtlebot3_gix_navigation2/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/t516_project/turtlebot3_gix_navigation2/launch/: navigation2.launch.py
