<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crawling_companion</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="xhe09@uw.edu">shirley&amp;suzy</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>usb_cam</exec_depend>
  <exec_depend>turtlebot3_gix_bringup</exec_depend>
  <exec_depend>yolo_ros2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
