<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_gix_bringup</name>
  <version>0.1.0</version>
  <description>
    ROS 2 package for turtlebot3_gix
  </description>
  <maintainer email="jhat@uw.edu">Jack</maintainer>
  <license>Apache 2.0</license>
  <author email="jhat@uw.edu">Jack</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>turtlebot3_gix_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
