<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_gix_hardware</name>
  <version>0.1.0</version>
  <description>
    ROS 2 package for turtlebot3_gix_hardware
  </description>
  <maintainer email="jhat@uw.edu">Jack</maintainer>
  <license>Apache 2.0</license>
  <author email="jhat@uw.edu">Jack</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>dynamixel_sdk</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
